# close

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backend_helper.md  database_schemas_helper.md  docker-compose.yml  env_setup_helper.md  frontend_helper.md  helper_doc_env_setup.md  infra_helper.md  pyproject.toml  reminders.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
